--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-amqp==2.1.4
-appdirs==1.4.2
-billiard==3.5.0.2
+flask==0.12
+flask_sqlalchemy==2.2
+flask_restful==0.3.5
 celery==4.0.2
-click==6.7
-Flask==0.12
-itsdangerous==0.24
-Jinja2==2.9.5
-kombu==4.0.2
-MarkupSafe==0.23
-packaging==16.8
-pyparsing==2.1.10
-pytz==2016.10
-six==1.10.0
-vine==1.1.3
-Werkzeug==0.11.15
